crates/pixi_spec/src/snapshots/pixi_spec__toml__test__round_trip.snap
---
source: crates/pixi_spec/src/toml.rs
expression: snapshot
---
- input: 1.2.3
  result: "==1.2.3"
- input:
    version: 1.2.3
  result:
    version: "==1.2.3"
- input:
    version: 1.2.3
    build-number: ">=3"
  result:
    version: "==1.2.3"
    build-number: ">=3"
- input: "*"
  result: "*"
- input:
    path: foobar
  result:
    path: foobar
- input:
    path: ~/.cache
  result:
    path: ~/.cache
- input:
    subdir: linux-64
  result:
    subdir: linux-64
- input:
    channel: conda-forge
    subdir: linux-64
  result:
    channel: conda-forge
    subdir: linux-64
- input:
    channel: conda-forge
    subdir: linux-64
  result:
    channel: conda-forge
    subdir: linux-64
- input:
    sha256: 315f5bdb76d078c43b8ac0064e4a0164612b1fce77c869345bfc94c75894edd3
  result:
    sha256: 315f5bdb76d078c43b8ac0064e4a0164612b1fce77c869345bfc94c75894edd3
- input:
    version: 1.2.3
    sha256: 315f5bdb76d078c43b8ac0064e4a0164612b1fce77c869345bfc94c75894edd3
  result:
    version: "==1.2.3"
    sha256: 315f5bdb76d078c43b8ac0064e4a0164612b1fce77c869345bfc94c75894edd3
- input:
    url: "https://conda.anaconda.org/conda-forge/linux-64/21cmfast-3.3.1-py38h0db86a8_1.conda"
  result:
    url: "https://conda.anaconda.org/conda-forge/linux-64/21cmfast-3.3.1-py38h0db86a8_1.conda"
- input:
    url: "https://conda.anaconda.org/conda-forge/linux-64/21cmfast-3.3.1-py38h0db86a8_1.conda"
    sha256: 315f5bdb76d078c43b8ac0064e4a0164612b1fce77c869345bfc94c75894edd3
  result:
    url: "https://conda.anaconda.org/conda-forge/linux-64/21cmfast-3.3.1-py38h0db86a8_1.conda"
    sha256: 315f5bdb76d078c43b8ac0064e4a0164612b1fce77c869345bfc94c75894edd3
- input:
    git: "https://github.com/conda-forge/21cmfast-feedstock"
  result:
    git: "https://github.com/conda-forge/21cmfast-feedstock"
- input:
    git: "https://github.com/conda-forge/21cmfast-feedstock"
    branch: main
  result:
    git: "https://github.com/conda-forge/21cmfast-feedstock"
    branch: main
- input:
    git: "https://github.com/conda-forge/21cmfast-feedstock"
    lfs: true
  result:
    git: "https://github.com/conda-forge/21cmfast-feedstock"
    lfs: true
- input:
    git: "https://github.com/conda-forge/21cmfast-feedstock"
    lfs: false
  result:
    git: "https://github.com/conda-forge/21cmfast-feedstock"
    lfs: false
- input:
    path: "../mypkg"
    version: 1.2.3
  result:
    path: "../mypkg"
    version: "==1.2.3"
- input:
    path: "../mypkg"
    version: ">=1.2"
    build: py37_*
  result:
    path: "../mypkg"
    version: ">=1.2"
    build: py37_*
- input:
    path: "../mypkg"
    subdir: linux-64
    track-features:
      - legacy
  result:
    path: "../mypkg"
    subdir: linux-64
    track-features:
      - legacy
- input:
    git: "https://github.com/foo/bar"
    branch: main
    version: ">=1.0"
    extras:
      - cuda
  result:
    git: "https://github.com/foo/bar"
    branch: main
    version: ">=1.0"
    extras:
      - cuda
- input:
    url: "https://example.com/foo.tar.gz"
    version: 1.2.3
    build-number: ">=3"
  result:
    url: "https://example.com/foo.tar.gz"
    version: "==1.2.3"
    build-number: ">=3"
- input:
    url: "https://example.com/foo.tar.gz"
    flags:
      - cuda
      - "blas:*"
  result:
    url: "https://example.com/foo.tar.gz"
    flags:
      - cuda
      - "blas:*"
- input:
    path: "../mypkg"
    version: 1.2.3
    license: MIT
  result:
    path: "../mypkg"
    version: "==1.2.3"
    license: MIT
- input:
    ver: 1.2.3
  result:
    error: "ERROR: unknown field `ver`"
- input:
    version: //
  result:
    error: "ERROR: malformed version string '': empty string"
- input:
    path: foobar
    version: //
  result:
    error: "ERROR: malformed version string '': empty string"
- input:
    path: foobar
    sha256: 315f5bdb76d078c43b8ac0064e4a0164612b1fce77c869345bfc94c75894edd3
  result:
    error: "ERROR: `sha256` cannot be used with `path`"
- input:
    git: "https://github.com/conda-forge/21cmfast-feedstock"
    branch: main
    tag: v1
  result:
    error: "ERROR: only one of `branch`, `rev`, or `tag` can be specified"
- input:
    version: 1.2.3
    lfs: true
  result:
    error: "ERROR: `branch`, `rev`, `tag`, and `lfs` are only valid when `git` is specified"
- input:
    git: "https://github.com/conda-forge/21cmfast-feedstock"
    sha256: 315f5bdb76d078c43b8ac0064e4a0164612b1fce77c869345bfc94c75894edd3
  result:
    error: "ERROR: `sha256` cannot be used with `git`"
- input:
    url: "https://example.com/foo.conda"
    version: 1.2.3
  result:
    error: "ERROR: `version` cannot be used with `url`"
- input:
    path: foo.conda
    version: 1.2.3
  result:
    error: "ERROR: `version` cannot be used with `path`"
- input:
    url: "https://example.com/foo.conda"
    license: MIT
  result:
    error: "ERROR: `license` cannot be used with `url`"
- input: /path/style
  result:
    error: "ERROR: it seems you're trying to add a path dependency, please specify as a table with a `path` key: '{ path = \"/path/style\" }'"
- input: "./path/style"
  result:
    error: "ERROR: it seems you're trying to add a path dependency, please specify as a table with a `path` key: '{ path = \"./path/style\" }'"
- input: "\\path\\style"
  result:
    error: "ERROR: it seems you're trying to add a path dependency, please specify as a table with a `path` key: '{ path = \"\\path\\style\" }'"
- input: ~/path/style
  result:
    error: "ERROR: it seems you're trying to add a path dependency, please specify as a table with a `path` key: '{ path = \"~/path/style\" }'"
- input: "https://example.com"
  result:
    error: "ERROR: it seems you're trying to add a url dependency, please specify as a table with a `url` key: '{ url = \"https://example.com\" }'"
- input: "https://github.com/conda-forge/21cmfast-feedstock"
  result:
    error: "ERROR: it seems you're trying to add a git dependency, please specify as a table with a `git` key: '{ git = \"https://github.com/conda-forge/21cmfast-feedstock\" }'"
- input: "1.2.3[subdir=linux-64]"
  result:
    error: "ERROR: expected a version specifier but looks like a matchspec, did you mean { version = \"==1.2.3\", subdir = \"linux-64\" }?"
- input: "1.2.3[channel=conda-forge]"
  result:
    error: "ERROR: expected a version specifier but looks like a matchspec, did you mean { version = \"==1.2.3\", channel = \"conda-forge\" }?"
- input: "conda-forge::1.2.3"
  result:
    error: "ERROR: expected a version specifier but looks like a matchspec, did you mean { version = \"==1.2.3\", channel = \"conda-forge\" }?"
- input: "1.2.3[md5=315f5bdb76d078c43b8ac0064e4a0164612b1fce77c869345bfc94c75894edd3]"
  result:
    error: "ERROR: it seems you're trying to add a detailed dependency, please specify as a table with a `md5` key: '{ version = \"<VERSION_SPEC>\", md5 = \"<MD5>\" }'"
- input: "1.2.3[sha256=315f5bdb76d078c43b8ac0064e4a0164612b1fce77c869345bfc94c75894edd3]"
  result:
    error: "ERROR: expected a version specifier but looks like a matchspec, did you mean { version = \"==1.2.3\", sha256 = \"315f5bdb76d078c43b8ac0064e4a0164612b1fce77c869345bfc94c75894edd3\" }?"
- input: "*cpu*"
  result:
    error: "ERROR: expected a version specifier but looks like a matchspec, did you mean { version = \"*\", build = \"cpu*\" }?"
- input: "*=*openblas"
  result:
    error: "ERROR: expected a version specifier but looks like a matchspec, did you mean { version = \"*\", build = \"*openblas\" }?"
