crates/pixi_spec/src/snapshots/pixi_spec__toml__test__v3_field_rejection_snapshot.snap
---
source: crates/pixi_spec/src/toml.rs
expression: snapshot
---
- label: json_extras_not_array
  input: "{\n  \"version\": \"*\",\n  \"extras\": \"dev\"\n}"
  error: "invalid type: string \"dev\", expected a sequence"
- label: json_extras_non_string_element
  input: "{\n  \"version\": \"*\",\n  \"extras\": [\n    42\n  ]\n}"
  error: "invalid type: integer `42`, expected a string"
- label: json_flags_not_array
  input: "{\n  \"version\": \"*\",\n  \"flags\": \"cuda\"\n}"
  error: "invalid type: string \"cuda\", expected a sequence"
- label: json_extras_with_path
  input: "{\n  \"path\": \"../foo\",\n  \"extras\": [\n    \"dev\"\n  ]\n}"
  error: "`extras` cannot be used with `path`"
- label: json_flags_with_git
  input: "{\n  \"git\": \"https://example.com/foo.git\",\n  \"flags\": [\n    \"cuda\"\n  ]\n}"
  error: "`flags` cannot be used with `git`"
- label: json_track_features_with_url
  input: "{\n  \"url\": \"https://example.com/foo.conda\",\n  \"track-features\": [\n    \"legacy\"\n  ]\n}"
  error: "`track_features` cannot be used with `url`"
- label: toml_extras_not_array
  input: "version = \"*\"\nextras = \"dev\""
  error: "  × expected an array, found string\n   ╭─[pixi.toml:2:11]\n 1 │ version = \"*\"\n 2 │ extras = \"dev\"\n   ·           ───\n   ╰────"
- label: toml_flags_not_array
  input: "version = \"*\"\nflags = \"cuda\""
  error: "  × expected array, found string\n   ╭─[pixi.toml:2:10]\n 1 │ version = \"*\"\n 2 │ flags = \"cuda\"\n   ·          ────\n   ╰────"
- label: toml_flags_invalid_regex
  input: "version = \"*\"\nflags = [\"^[invalid$\"]"
  error: "  × invalid regex: ^[invalid$\n   ╭─[pixi.toml:2:11]\n 1 │ version = \"*\"\n 2 │ flags = [\"^[invalid$\"]\n   ·           ──────────\n   ╰────"
- label: toml_flags_invalid_glob
  input: "version = \"*\"\nflags = [\"*[unclosed\"]"
  error: "  × invalid glob: *[unclosed\n   ╭─[pixi.toml:2:11]\n 1 │ version = \"*\"\n 2 │ flags = [\"*[unclosed\"]\n   ·           ──────────\n   ╰────"
- label: toml_extras_with_path
  input: "path = \"../foo\"\nextras = [\"dev\"]"
  error: "  × `extras` cannot be used with `path`\n   ╭─[pixi.toml:1:1]\n 1 │ ╭─▶ path = \"../foo\"\n 2 │ ╰─▶ extras = [\"dev\"]\n   ╰────"
- label: toml_flags_with_url
  input: "url = \"https://example.com/foo.conda\"\nflags = [\"cuda\"]"
  error: "  × `flags` cannot be used with `url`\n   ╭─[pixi.toml:1:1]\n 1 │ ╭─▶ url = \"https://example.com/foo.conda\"\n 2 │ ╰─▶ flags = [\"cuda\"]\n   ╰────"
- label: toml_track_features_with_git
  input: "git = \"https://example.com/foo.git\"\ntrack-features = [\"legacy\"]"
  error: "  × `track_features` cannot be used with `git`\n   ╭─[pixi.toml:1:1]\n 1 │ ╭─▶ git = \"https://example.com/foo.git\"\n 2 │ ╰─▶ track-features = [\"legacy\"]\n   ╰────"
