crates/pixi_spec/src/snapshots/pixi_spec__toml__test__v3_reject_extras_non_string_element_json.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_json_error(input)
---
invalid type: integer `42`, expected a string
