crates/pixi_spec/src/snapshots/pixi_spec__toml__test__v3_reject_extras_not_array_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × expected an array, found string
   ╭─[pixi.toml:2:11]
 1 │ version = "*"
 2 │ extras = "dev"
   ·           ───
   ╰────
