crates/pixi_spec/src/snapshots/pixi_spec__toml__test__v3_reject_extras_with_path_json.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_json_error(input)
---
`extras` cannot be used with `path`
