crates/pixi_spec/src/snapshots/pixi_spec__toml__test__v3_reject_extras_with_path_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × `extras` cannot be used with `path`
   ╭─[pixi.toml:1:1]
 1 │ ╭─▶ path = "../foo"
 2 │ ╰─▶ extras = ["dev"]
   ╰────
