crates/pixi_spec/src/snapshots/pixi_spec__toml__test__v3_reject_flags_invalid_glob_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × invalid glob: *[unclosed
   ╭─[pixi.toml:2:11]
 1 │ version = "*"
 2 │ flags = ["*[unclosed"]
   ·           ──────────
   ╰────
