crates/pixi_spec/src/snapshots/pixi_spec__toml__test__v3_reject_flags_not_array_json.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_json_error(input)
---
invalid type: string "cuda", expected a sequence
