crates/pixi_spec/src/snapshots/pixi_spec__toml__test__v3_reject_flags_not_array_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × expected array, found string
   ╭─[pixi.toml:2:10]
 1 │ version = "*"
 2 │ flags = "cuda"
   ·          ────
   ╰────
