crates/pixi_spec/src/snapshots/pixi_spec__toml__test__v3_reject_flags_with_git_json.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_json_error(input)
---
`flags` cannot be used with `git`
